--- a/algorithm/程序员算法面试指南.md
+++ b/algorithm/程序员算法面试指南.md
@@ -1,5 +1,5 @@
 二叉树的按层打印
-'''c
+'''C
 #include <iostream>
 #include <queue>	
 using namespace std;
@@ -11,7 +11,7 @@ struct Node{
 	Node(int x) : value(x), left(NULL), right(NULL) {}
 };
 
-void printByLevel(Node********** head) {
+void printByLevel(Node* head) {
 	if (NULL == head)
 		return;
 	queue<Node*> mq;
