--- a/algorithm/程序员算法面试指南.md
+++ b/algorithm/程序员算法面试指南.md
@@ -1,5 +1,5 @@
 二叉树的按层打印
-'''cpp
+```cpp
 struct Node{
 	int value;
 	Node* left;
@@ -37,4 +37,4 @@ void printByLevel(Node* head) {
 		mq.pop();
 	}
 }
-'''
+```
