--- a/algorithm/程序员算法面试指南.md
+++ b/algorithm/程序员算法面试指南.md
@@ -1,7 +1,7 @@
-*二叉树的按层打印*
-##题目
+**二叉树的按层打印**
+## 题目
 给定一颗二叉树的头结点head,分别实现按成打印和ZigZag打印二叉树的函数。
-C++代码实现:
+## C++代码实现:
 ```cpp
 struct Node{
 	int value;
