--- a/algorithm/程序员算法面试指南.md
+++ b/algorithm/程序员算法面试指南.md
@@ -42,3 +42,65 @@ void printByLevel(Node* head) {
 	}
 }
 ```
+## 按ZigZag打印的实现
+### C++代码实现:
+```cpp
+struct Node {
+	int value;
+	Node* left;
+	Node* right;
+	Node(int x) : value(x), left(NULL), right(NULL) {}
+};
+
+void printByZigZag(Node* head) {
+	if (NULL == head)
+		return;
+	queue<Node*> mq;	// 按层入队
+	stack<Node*> ms;	// 保存下一层的全部结点
+	int level = 1;
+	mq.push(head);
+
+	while(!mq.empty()) {
+		Node* cur = NULL;
+		// 奇数层，从左往右打印
+		// 偶数层，从右往左打印
+		if (1 == level % 2) {
+			cout << "Level " << level << "from left to right: ";
+			// 把下一层从左往右入栈
+			while (!mq.empty) {
+				cur = mq.front();
+				if (NULL != cur->left)
+					ms.push(cur->left);
+				if (NULL != cur->right)
+					ms.push(cur->right);
+
+				// 打印结点值
+				cout << cur->value << " ";
+				mq.pop();
+			}
+		} else {
+			cout << "Level " << level << "from right to left: ";
+			// 下一层结点从右往左入栈
+			while (!mq.empty) {
+				cur = mq.front();
+				if (NULL != cur->right)
+					ms.push(cur->right);
+				if (NULL != cur->left)
+					ms.push(cur->left);
+				cout << cur->value << " ";
+				mq.pop();
+			}
+		}
+
+		cout << endl;
+		
+		// 把下一层结点入队
+		while (!ms.empty()) {
+			mq.push(ms.top());
+			ms.pop();
+		}
+		
+		++level;
+	}
+}
+```
