--- a/algorithm/程序员算法面试指南.md
+++ b/algorithm/程序员算法面试指南.md
@@ -2,7 +2,7 @@
 ## 题目
 给定一颗二叉树的头结点head,分别实现按成打印和ZigZag打印二叉树的函数。
 ## 按层打印的实现
-### C++代码实现:
+### C++实现:
 ```cpp
 struct Node{
 	int value;
@@ -42,8 +42,9 @@ void printByLevel(Node* head) {
 	}
 }
 ```
+### Java实现
 ## 按ZigZag打印的实现
-### C++代码实现:
+### C++实现:
 ```cpp
 struct Node {
 	int value;
@@ -104,3 +105,4 @@ void printByZigZag(Node* head) {
 	}
 }
 ```
+### Java实现
