--- a/algorithm/程序员算法面试指南.md
+++ b/algorithm/程序员算法面试指南.md
@@ -45,6 +45,7 @@ void printByLevel(Node* head) {
 ### Java实现
 ## 按ZigZag打印的实现
 ### C++实现:
+#### 方法1
 ```cpp
 struct Node {
 	int value;
@@ -104,5 +105,67 @@ void printByZigZag(Node* head) {
 		++level;
 	}
 }
+```
+#### 方法2
+```cpp
+struct Node {
+	int value;
+	Node* left;
+	Node* right;
+	Node(int x) : value(x), left(NULL), right(NULL) {}
+};
+
+void printByZigZag(Node* head) {
+	if (NULL == head) 
+		return;
+	deque<Node*> dq;
+	Node* last = head;
+	int level = 1;
+	dq.push_front(head);
+	cout << "Level " << level << " from left to right: ";
+
+	while (!dq.empty()) {
+		// 从左往右遍历
+		// 1)从队头出队
+		// 2)从队尾入队:先左孩子，后右孩子
+		if (1 == level % 2) {
+			head = dq.front();
+			dq.pop_front();
+			cout << head->value << " ";
+			if (NULL != head->left) 
+				dq.push_back(head->left);
+			if (NULL != head->right)
+				dq.push_back(head->right);
+
+			// 遍历到当前层最右结点
+			if (head == last && !dq.empty()) {
+				// 下一层最后遍历的结点在最左边
+				// 也就是队列的队头
+				last = dq.front();
+				++level;
+				cout << endl;
+				cout << "Level " << level << " from right to left: ";
+			}
+		} else {
+			// 从右往左遍历
+			// 1)从队尾出队
+			// 2)从队头入队:先右孩子,后左孩子
+			head = dq.back();
+			dq.pop_back();
+			cout << head->value << " ";
+			if (NULL != head->right)
+				dq.push_front(head->right);
+			if (NULL != head->left)
+				dq.push_front(head->left);
+
+			if (head == last && !dq.empty()) {
+				last = dq.back();
+				++level;
+				cout << endl;
+				cout << "Level " << level << " from left to right: ";
+			}
+		}
+		cout << endl;
+	}
 ```
 ### Java实现
